--- a/ticktactoe.html
+++ b/ticktactoe.html
@@ -1,27 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TICK TACK TOE</title>
-    <link rel="stylesheet"href="tick.css"/>
-</head>
-<body><main>
-<h1>TICK TACK TOE</h1> 
-<div class="container">
-<div class="game">
-    <button class="box"> </button>
-    <button class="box"> </button>
-    <button class="box"> </button>
-    <button class="box"> </button>
-    <button class="box"> </button>
-    <button class="box"> </button>
-    <button class="box"> </button>
-    <button class="box"> </button>
-    <button class="box"> </button>
-</div>  
-</div>
-<button clas="resB">Reset Button</button>
-<script src="javaS.js"></script>
-</main></body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Tic-Tac-Toe Game</title>
+    <link rel="stylesheet" href="tick.css" />
+  </head>
+  <body>
+    <div class="msg-container hide">
+      <p id="msg">Winner</p>
+      <button id="new-btn">New Game</button>
+    </div>
+    <main>
+      <h1>Tic Tac Toe</h1>
+      <div class="container">
+        <div class="game">
+          <button class="box"></button>
+          <button class="box"></button>
+          <button class="box"></button>
+          <button class="box"></button>
+          <button class="box"></button>
+          <button class="box"></button>
+          <button class="box"></button>
+          <button class="box"></button>
+          <button class="box"></button>
+        </div>
+      </div>
+      <button id="reset-btn">Reset Game</button>
+    </main>
+    <script src="javass.js"></script>
+  </body>
 </html>
